Fix wrapping of awards table for players with tons of awards

--- a/css/bbgm.css
+++ b/css/bbgm.css
@@ -369,6 +369,10 @@ select.teams {
   width: 100px;
 }
 
+#player-awards {
+  white-space: normal;
+}
+
 .team-picture {
   display: none; /* Hide by default, shown in views/roster.js */
 	background-position: center center;
